# Operation-System-Labs

./: .gitignore  README.md
OS_colloquium/: README.txt  settings.gradle.kts
OS_colloquium/src/main/kotlin/: AttackType.kt  Dice.kt  Main.kt  SpaceMarine.kt
OS_lab1/: creator.cpp  main.cpp  reporter.cpp
OS_lab2/: ArrData.h  main.cpp
OS_lab3/: ThreadInfo.h  main.cpp
OS_lab3/Additional_features/: CMakeLists.txt  MarkerFunction.hpp  README.md
OS_lab3/Additional_features/tests/: testLab3.cpp
OS_lab3/New_standart/: CMakeLists.txt  MarkerFunction.hpp  ThreadInfo.h  main.cpp
OS_lab4/: receiver.cpp  sender.cpp
OS_lab5/: 2  client.cpp  employee.h  piper.h  server.cpp
